@@ -3083,6 +3083,7 @@ fn from_reports() {
     // negative compressed evex displacements should not overflow and panic
     test_display(&[0x62, 0xf2, 0x6d, 0xac, 0x00, 0x59, 0xa7], "vpshufb ymm3{k4}{z}, ymm2, ymmword [ecx - 0xb20]");
     test_display(&[0x62, 0xf2, 0xfd, 0x0f, 0x8a, 0x62, 0xf2], "vcompresspd xmmword [edx - 0x70]{k7}, xmm4");
+    test_display(&[0xf3, 0x0f, 0x1e, 0x0f], "nop dword [edi], ecx");
 }
 
 mod reg_masks {
